# Until-I-Find-You

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix  rust-toolchain.toml
ci/: linux.sh
crates/uify-bbox/: Cargo.toml
crates/uify-bbox/src/: lib.rs
crates/uify-bbox/tests/: bbox_tracker_2d.rs
crates/uify-clap-plugin/: Cargo.toml
crates/uify-clap-plugin/src/: lib.rs
crates/uify-core/: Cargo.toml
crates/uify-core/src/: lib.rs  sample.rs  tracker.rs
crates/uify-core/src/filters/: ekf_manifold.rs  kalman.rs  mod.rs  rts_smoother.rs
crates/uify-core/src/manifolds/: mod.rs  se2.rs  se3.rs  sl3.rs  so2.rs  so3.rs
crates/uify-core/src/pipeline/: mod.rs
crates/uify-core/tests/: ekf_se3.rs  manifold_identities.rs
crates/uify-face/: Cargo.toml
crates/uify-face/src/: lib.rs
crates/uify-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/uify-ffi/src/: lib.rs
crates/uify-plane/: Cargo.toml
crates/uify-plane/src/: lib.rs
crates/uify-plane/tests/: plane_tracker.rs
crates/uify-point/: Cargo.toml
crates/uify-point/src/: lib.rs
crates/uify-point/tests/: point_tracker_2d.rs
crates/uify-roto/: Cargo.toml
crates/uify-roto/src/: lib.rs
crates/uify-runtime/: Cargo.toml
crates/uify-runtime/src/: lib.rs
crates/uify-runtime/src/camera/: mod.rs
crates/uify-runtime/src/inference/: mod.rs
crates/uify-runtime/src/ringbuf/: mod.rs
crates/uify-runtime/tests/: camera_inference.rs  ringbuf.rs
crates/uify-transport-midi/: Cargo.toml
crates/uify-transport-midi/src/: lib.rs
crates/uify-transport-osc/: Cargo.toml
crates/uify-transport-osc/src/: lib.rs
crates/uify-transport-osc/tests/: osc_sink.rs
crates/uify-transport-shm/: Cargo.toml
crates/uify-transport-shm/src/: lib.rs
docs/: architecture.mdx  data.json  development.mdx  index.mdx  reference.mdx  skill.mdx
docs/architecture/: extension.mdx  latency-budget.mdx  manifolds.mdx  pipeline.mdx  threading.mdx
docs/development/: build.mdx  contributing.mdx  platform.mdx  testing.mdx
docs/reference/: core.mdx  ffi.mdx  plugins.mdx  runtime.mdx  trackers.mdx  transports.mdx
examples/pipeline/: Cargo.toml
examples/pipeline/src/: lib.rs  main.rs
examples/pipeline/tests/: end_to_end.rs
include/: uify.h
nix/: checks.nix  devShells.nix  uify.nix
nix/utils/: precommit.nix  treefmt.nix
tools/docs/: README.md  build_index.py  hook.sh  utils.py  validate.py
