[workspace]
resolver = "2"
members = [
  "crates/uify-core",
  "crates/uify-point",
  "crates/uify-bbox",
  "crates/uify-plane",
  "crates/uify-face",
  "crates/uify-roto",
  "crates/uify-runtime",
  "crates/uify-transport-osc",
  "crates/uify-transport-midi",
  "crates/uify-transport-shm",
  "crates/uify-clap-plugin",
  "crates/uify-ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.85"
authors = ["rahulmnavneeth"]
repository = "https://gitlab.com/bitspaceorg/tools/until-i-find-you"

[workspace.dependencies]
# Internal
uify-core = { path = "crates/uify-core" }
uify-point = { path = "crates/uify-point" }
uify-bbox = { path = "crates/uify-bbox" }
uify-plane = { path = "crates/uify-plane" }
uify-face = { path = "crates/uify-face" }
uify-roto = { path = "crates/uify-roto" }
uify-runtime = { path = "crates/uify-runtime" }

# Math
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
num-traits = "0.2"
approx = "0.5"

# Concurrency (real-time safe)
rtrb = "0.3"
atomic_float = "1.1"
crossbeam = "0.8"
parking_lot = "0.12"

# Error handling
thiserror = "2"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
proptest = "1"
criterion = { version = "0.5", default-features = false }
insta = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"

# Audio-thread correctness: dev/debug builds still need reasonable perf and
# predictable behavior when a plugin is loaded in a DAW.
[profile.dev]
opt-level = 1

# Benches run in release mode.
[profile.bench]
opt-level = 3
lto = "thin"
debug = true
