[package]
name = "uify-face"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Facial tracking: landmarks + SE(3) head pose + blendshape weights."

[dependencies]
uify-core.workspace = true
nalgebra.workspace = true
thiserror.workspace = true
tracing.workspace = true
