[package]
name = "uify-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "C ABI for embedding the tracker core into other programs. Shared-library artifact + generated C header."

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
uify-core.workspace = true
uify-runtime.workspace = true

[build-dependencies]
cbindgen = "0.27"
