[package]
name = "uify-plane"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Planar tracking: homography + PnP → SE(3) pose. Virtual camera body."

[dependencies]
uify-core.workspace = true
nalgebra.workspace = true
thiserror.workspace = true
tracing.workspace = true
