[package]
name = "uify-point"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Single-point (ball / feature) tracker."

[dependencies]
uify-core.workspace = true
nalgebra.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
