[package]
name = "uify-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Runtime: camera capture, inference (ONNX/CoreML/…), lock-free ring buffers, thread orchestration."

[dependencies]
uify-core.workspace = true
rtrb.workspace = true
atomic_float.workspace = true
crossbeam.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
nalgebra.workspace = true

[features]
default = []
# Each backend is opt-in; the plugin binary picks what it needs per platform.
onnx = []
coreml = []
directml = []
nnapi = []
