[package]
name = "uify-transport-osc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "OSC transport: DAWs (Ableton, Bitwig, Reaper), Max, TouchDesigner."

[dependencies]
uify-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
