[package]
name = "uify-pipeline-example"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "End-to-end pipeline demo: synthetic camera + constant inference + 2D point tracker + lock-free ringbuf + OSC sink."

[lib]
path = "src/lib.rs"

[[bin]]
name = "uify-pipeline-example"
path = "src/main.rs"

[dependencies]
uify-core.workspace = true
uify-runtime.workspace = true
uify-point.workspace = true
uify-transport-osc.workspace = true
nalgebra.workspace = true

[dev-dependencies]
rosc.workspace = true
